# white

./: .hlint.yaml  LICENSE  NOTES.md  README.md  README.org  asri.scm  blue.cabal  ehandler.scm  fourmolu.yaml  ft.scm  helpers.scm  imp.scm  lambda.scm  phase3.tex  presentation.tex  refs.bib  tc.scm  white.cabal  white.scm  wp.scm
app/: Main.hs
docs/: annotated-bib.aux  annotated-bib.tex  annotated.tex  notes.org  paper.tex  presentation.tex  refs.bib
examples/: database.rsl  election_database.rsl  hoare.imp  simple.imp  sqrt.hot  sqrt.hot~
fingertrees/: README.org  refs.bib
gcl/: helpers.scm  main.scm  scanner.scm  wp.scm
hot-lang/: ehandler.scm  helpers.scm  parser.scm  scanner.scm
imp-lang/: helpers.scm  main.scm  parser.scm  scanner.scm  wp.scm
imp-lang/examples/: simple.rsl
raise/examples/: election_database.rsl
raise/rsl/: ehandler.scm
rdm/rdm-lang/fe/: helpers.scm  parser.scm  scanner.scm
rsl/: eval.scm  main.scm  parsec.scm  parser.scm  scanner.scm  structs.scm
scripts/: lint.sh
src/: Eval.hs  Lexer.hs  Main.hs  Monad.hs  Parser.hs  Syntax.hs  blue.scm  env.scm  str.scm  tensor.scm  utils.scm
