cabal-version:      3.0
name:               blue
version:            0.1.0.0
synopsis:           A reflective language with dataflow semantics
homepage:           https://github.com/ih1d/blue
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
category:           Language
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wpartial-fields
        -Wredundant-constraints
        -Wunused-packages

executable blue
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
                    , parsec
                    , mtl
                    , hint
                    , exceptions
    other-modules:
        Lexer
        Parser
        Eval
        Syntax
    hs-source-dirs:   src
    default-language: GHC2021
