cabal-version:      3.0
name:               white
version:            0.1.0.0
synopsis:           A reflective language
homepage:           https://github.com/ih1d/white
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
category:           Language
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wpartial-fields
        -Wredundant-constraints
        -Wunused-packages

executable white
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
                    , parsec
                    , mtl
                    , hint
                    , exceptions
    other-modules:
        Lexer
        Parser
        Eval
        Syntax
    hs-source-dirs:   src
    default-language: GHC2021
